added app security configuration